--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,9 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     implementation 'com.google.firebase:firebase-auth:19.3.2'
     implementation 'com.google.firebase:firebase-database:19.3.1'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
     kapt "androidx.room:room-compiler:$room_version"
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
